--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,10 @@ header img {
     margin-left: 3%;
 }
 
+#logoAlura {
+    margin-top: 8px;
+}
+
 .conteudoPrincipal {
     display: flex;
     justify-content: center;
@@ -135,8 +139,6 @@ header img {
     #areaDeDigitar {
         padding-bottom: 80px;
         font-size: 100%;
-        font-family: 'Protest Guerrilla', sans-serif;
-        color: #E32B63;
     }
     
 
